0024717: TKOpenGl - globally defined clipping planes blink when operating with view

Specify viewer (global) clippings in correct view transformation space.

Correction of test case for issue CR24717